legacy/test/util/test_case/tree_file/invalid/invalid_tree.tree
name: root
type: invalid_type
children:
  - name: foo.txt
    type: file